feat: altera queries para compatibilidade com schema no bigquery
